recursion.cons.occurrences.Occurrences.scala.error
Compilation error:
Occurrences:2: error: type mismatch;
 found   : Unit
 required: Int
def occurrences(l:List[Int], v:Int): Int = {
                                           ^